# doc-forge

./: .gitignore  README.md  env.example  pyproject.toml
.project/: ARCHITECTURE.md  EPICS_AND_STORIES.md
.project/epics/: epic-7-interactive-cli.md
.project/stories/: epic-7-stories.md
converter/: convert.js  md_parser.js  md_parser.test.js  output.docx  package-lock.json  package.json
converter/fixtures/: temp.md
src/: config.py  main.py
src/backend/: __init__.py  agent.py  entry.py  graph.py  graph_nodes.py  prompts.py  routing.py  state.py  tools.py
src/converter/: __init__.py  run_converter.py
src/llm/: __init__.py  client.py  generator.py  healer.py  prompts.py
src/node/: converter.js  package-lock.json  package.json
src/pipeline/: pipeline.py
src/resolver/: ref_resolver.py
src/tui/: app.py  commands.py  panels.py  state.py  watcher.py
tests/: test_agent_node.py  test_agent_prompts.py  test_asset_handler.py  test_asset_scan_settings.py  test_checkpoint_node.py  test_convert_docx_node.py  test_entry.py  test_error_classifier.py  test_error_handlers.py  test_graph.py  test_human_input_interrupt.py  test_image_scanner.py  test_main.py  test_md_to_json_parser.py  test_parse_to_json_node.py  test_placeholder_insertion.py  test_quality_check_node.py  test_quality_validator.py  test_ref_resolver.py  test_sanitizer.py  test_save_results_node.py  test_state.py  test_story_routing.py  test_structure_schema.py  test_structured_logger.py  test_tools.py
tests/converter/: test_run_converter.py
tests/e2e/: conftest.py  test_error_paths.py  test_full_workflow.py  test_interrupt_resume.py  test_validation_loop.py
tests/fixtures/: empty.json  empty_rows.json
tests/integration/: conftest.py  test_checkpoint_rollback_flow.py  test_error_recovery.py  test_parse_convert_quality_flow.py  test_scan_to_agent_flow.py  test_validation_fix_loop.py
tests/llm/: test_client.py  (+3 more)
(+23 files in other folders)
