[project]
name = "doc-creator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1",
    "mypy>=1.0",
]

[tool.mypy]
python_version = "3.13"
mypy_path = "src"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]

[tool.hatch.build.targets.sdist]
packages = ["src/backend"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-v"
markers = [
    "security: marks tests as security-related (path traversal, symlink, etc.)",
]

[tool.coverage.run]
source = ["src/backend"]
