[project]
name = "doc-creator"
version = "0.1.0"
description = "DocForge - Document creation pipeline"
requires-python = ">=3.11"
dependencies = [
    "rich",
    "watchdog",
    "litellm",
    "pydantic",
]

[project.scripts]
main = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
