[project]
name = "doc-creator"
version = "0.1.0"
description = "DocForge - Document creation pipeline"
requires-python = ">=3.11"
dependencies = [
    "rich",
    "watchdog",
    "litellm",
    "pydantic",
    "prompt-toolkit",
    "pydantic-settings>=2.13.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.scripts]
main = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
